make selector buttons inline-block to stop overlap allows for vertical padding so that they don't overlap when wrapping

--- a/assets/css/home.scss
+++ b/assets/css/home.scss
@@ -27,6 +27,7 @@ body {
     font-size: 14px;
     font-family: sans-serif;
     cursor: pointer;
+    display:inline-block
     
     & input {
         display: none;
